Huyen pull code 20h

--- a/Admin/IngredientsManager/View/IngredientDelete.fxml
+++ b/Admin/IngredientsManager/View/IngredientDelete.fxml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
-<?import javafx.scene.control.ButtonType?>
-<?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<DialogPane id="dialogDelete" prefHeight="260.0" prefWidth="343.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.DataManager.Controller.AdminDeleteController">
-   <content>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="420.0" styleClass="dialogDelete">
-         <children>
-            <Label prefHeight="31.0" prefWidth="420.0" styleClass="header" text="Delete" />
-            <ImageView fitHeight="117.0" fitWidth="122.0" layoutX="152.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../../Icon/alert.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="150.0" layoutY="168.0" prefHeight="35.0" prefWidth="123.0" styleClass="LabelTitleDelete" text="Are you sure?" />
-            <Label layoutX="66.0" layoutY="203.0" prefHeight="27.0" prefWidth="289.0" styleClass="LabelTitleDelete2" text="You will not be able to recover this file!" />
-         </children>
-         <stylesheets>
-            <URL value="@../../DataManager/View/Css/AddApplication.css" />
-            <URL value="@../../DataManager/View/Css/AdminApplication.css" />
-         </stylesheets>
-      </AnchorPane>
-   </content>
-   <buttonTypes>
-      <ButtonType fx:constant="YES" />
-      <ButtonType fx:constant="NO" />
-   </buttonTypes>
-   <stylesheets>
-      <URL value="@../../DataManager/View/Css/Application.css" />
-      <URL value="@../../DataManager/View/Css/AdminApplication.css" />
-      <URL value="@../../DataManager/View/Css/AddApplication.css" />
-   </stylesheets>
-</DialogPane>
+<?import java.net.URL?>
+<AnchorPane prefHeight="311.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientDeleteController">
+   <children>
+      <Label layoutY="-1.0" prefHeight="31.0" prefWidth="430.0" styleClass="header" text="Delete" />
+      <ImageView fitHeight="117.0" fitWidth="122.0" layoutX="162.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../Icon/alert.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="160.0" layoutY="178.0" prefHeight="35.0" prefWidth="123.0" styleClass="LabelTitleDelete" text="Are you sure?" />
+      <Label layoutX="76.0" layoutY="213.0" prefHeight="27.0" prefWidth="289.0" styleClass="LabelTitleDelete2" text="You will not be able to recover this file!" />
+      <Button layoutX="253.0" layoutY="272.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="74.0" styleClass="btn-confirm" text="No">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="344.0" layoutY="272.0" mnemonicParsing="false" onAction="#removeItem" prefHeight="27.0" prefWidth="74.0" styleClass="btn-confirm" text="Yes">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+   </children>
+    <stylesheets>
+        <URL value="@../../DataManager/View/Css/Application.css" />
+        <URL value="@../../DataManager/View/Css/AdminApplication.css" />
+        <URL value="@../../DataManager/View/Css/AddApplication.css" />
+        <URL value="@Css/WarehouseApplication.css" />
+    </stylesheets>
+</AnchorPane>
