Code checkin/checkout

--- a/Admin/SalaryCalculate/View/CSS/Salary.css
+++ b/Admin/SalaryCalculate/View/CSS/Salary.css
@@ -4,20 +4,37 @@
     -fx-font-family: "Segoe UI Semibold";
     -fx-font-weight: Bold;
     -fx-font-size: 18px;
+    -fx-color: #5F50F1;
 }
 .TextField {
     -fx-background-color: #FFFFFF;
     -fx-border-radius: 20;
-}
-.button-menu{
-    -fx-background-color: ;
+
 }
 .button-menu:hover{
     -fx-effect: dropshadow(three-pass-box, #5F50F1,10,0,0,0);
 }
 .background{
-    -fx-background-color: #CCCCCC;
+    -fx-background-color: #CCFFFF;
 }
 .title{
-    -fx-background-color: #CCFFFF;
+    -fx-background-color: #FFFFFF;
+}
+.table-view{
+     -fx-effect: dropshadow(three-pass-box, #111,10,0,0,0);
+}
+.button-menu {
+    -fx-background-color: transparent;
+    -fx-background-color: #5F50F1;
+    -fx-color: #5F50F1;
+    -fx-font-family: "Segoe UI Semibold";
+}
+.button-checkin , .button-checkout {
+    -fx-background: #CCCCCC	;
+}
+.button-bc{
+    -fx-background-color: transparent;
+}
+.button-bc:hover{
+    -fx-opacity: 0.8;
 }
