--- a/Admin/SalaryCalculate/View/Employee.fxml
+++ b/Admin/SalaryCalculate/View/Employee.fxml
@@ -9,10 +9,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="592.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Salarytable">
+<AnchorPane prefHeight="592.0" prefWidth="950.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Employee">
     <children>
         <Button layoutX="3.0" layoutY="39.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
-        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false"  prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
         <Button layoutX="3.0" layoutY="148.0" mnemonicParsing="false" onAction="#changeSceneTimekeeping" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
         <Button layoutX="31.0" layoutY="520.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc">
             <graphic>
@@ -23,21 +23,21 @@
                 </ImageView>
             </graphic>
         </Button>
-      <AnchorPane layoutX="121.0" prefHeight="520.0" prefWidth="765.0">
-         <children>
-             <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="794.0" text="Salary" />
-             <TableView layoutY="42.0" prefHeight="540.0" prefWidth="794.0">
-               <columns>
-                  <TableColumn prefWidth="72.66668701171875" text="ID" />
-                  <TableColumn prefWidth="227.33331298828125" text="Name" />
-                  <TableColumn prefWidth="107.66668701171875" text="Type" />
-                  <TableColumn prefWidth="141.0" text="SalaryOfTime" />
-                  <TableColumn prefWidth="88.6666259765625" text="Work Time" />
-                  <TableColumn prefWidth="157.3333740234375" text="Salary" />
-               </columns>
-            </TableView>
-         </children>
-      </AnchorPane>
+        <AnchorPane layoutX="121.0" prefHeight="520.0" prefWidth="765.0">
+            <children>
+                <Label fx:id="header" alignment="CENTER" prefHeight="35.0" prefWidth="794.0" text="Employee" />
+                <TableView layoutY="42.0" prefHeight="540.0" prefWidth="794.0">
+                    <columns>
+                        <TableColumn prefWidth="72.66668701171875" text="ID" />
+                        <TableColumn prefWidth="227.33331298828125" text="Name" />
+                        <TableColumn prefWidth="93.33331298828125" text="Phone" />
+                        <TableColumn prefWidth="156.33331298828125" text="Address" />
+                        <TableColumn prefWidth="102.666748046875" text="Type" />
+                        <TableColumn prefWidth="138.333251953125" text="Possiton" />
+                    </columns>
+                </TableView>
+            </children>
+        </AnchorPane>
     </children>
     <stylesheets>
         <URL value="@CSS/Salary.css" />
