--- a/Admin/SalaryCalculate/View/Timekeeping.fxml
+++ b/Admin/SalaryCalculate/View/Timekeeping.fxml
@@ -1,40 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane styleClass="background" prefHeight="493.0" prefWidth="712.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
-    <children >
-        <Button layoutX="14.0" layoutY="48.0" mnemonicParsing="false" styleClass="button-menu" text="Bảng lương" onAction="#changeSceneSalarytable" />
-        <Button layoutX="14.0" layoutY="95.0" mnemonicParsing="false" styleClass="button-menu" text="Chấm công" onAction="#changeSceneTimekeeping" />
-      <AnchorPane layoutX="123.0" prefHeight="493.0" prefWidth="601.0" styleClass="title">
+<AnchorPane prefHeight="493.0" prefWidth="712.0" styleClass="background" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.SalaryCalculate.Controller.Timekeeping">
+    <children>
+        <Button layoutX="3.0" layoutY="39.0" mnemonicParsing="false" onAction="#changeSceneEmployee" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Employee" />
+        <Button layoutX="3.0" layoutY="93.0" mnemonicParsing="false" onAction="#changeSceneSalarytable" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="Salary" />
+        <Button layoutX="3.0" layoutY="148.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="116.0" styleClass="button-menu" text="TimeKeeping" />
+        <Button layoutX="31.0" layoutY="400.0" minWidth="52.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="52.0" styleClass="button-bc">
+            <graphic>
+                <ImageView fitHeight="41.0" fitWidth="45.0" layoutX="206.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
+                    <image>
+                        <Image url="@../../../Icon/backnow.png" />
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
+        <AnchorPane layoutX="119.0" prefHeight="493.0" prefWidth="601.0" styleClass="title">
          <children>
-             <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="601.0" text="Chấm công" />
-            <Button layoutX="210.0" layoutY="262.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="183.0" text="Xác nhận" />
-            <Label layoutX="32.0" layoutY="37.0" text="Mã nhân viên:" />
-            <TextField layoutX="138.0" layoutY="95.0" prefHeight="26.0" prefWidth="232.0" text="5/5/2022" />
-            <Label layoutX="32.0" layoutY="69.0" text="Tên nhân viên:" />
-            <TextField layoutX="137.0" layoutY="65.0" prefHeight="26.0" prefWidth="232.0" text="Nguyễn Hoàng Gia Đại" />
-            <Label layoutX="32.0" layoutY="99.0" text="Ngày :" />
-            <TextField layoutX="137.0" layoutY="33.0" prefHeight="26.0" prefWidth="232.0" text="3120560013" />
-            <TextField layoutX="89.0" layoutY="134.0" text="8" />
-            <Label layoutX="32.0" layoutY="138.0" text="Giờ vào:" />
-            <Label layoutX="254.0" layoutY="138.0" text="Giờ ra:" />
-            <TextField layoutX="302.0" layoutY="134.0" text="23" />
+             <Label fx:id="header" alignment="CENTER" prefHeight="34.0" prefWidth="601.0" text="TimeKeeping" />
+            <Button layoutX="192.0" layoutY="261.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="183.0" text="Accept" />
+            <Label layoutX="120.0" layoutY="87.0" text="ID:" />
+            <Label layoutX="117.0" layoutY="130.0" text="Name:" />
+            <TextField fx:id="name" layoutX="222.0" layoutY="126.0" prefHeight="26.0" prefWidth="232.0" >
+                <font>
+                    <Font size="17.0" />
+                </font>
+             </TextField>
+            <TextField fx:id="employeeID"  layoutX="222.0" layoutY="83.0" prefHeight="26.0" prefWidth="232.0" />
+            <Button layoutX="120.0" layoutY="181.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkin" text="Checkin" onAction="#checkin"/>
+            <Button layoutX="298.0" layoutY="181.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="153.0" styleClass="button-checkout" text="Checkout" onAction="#checkout" />
                 
          </children>
       </AnchorPane>
     </children>
     <stylesheets>
-        <URL value="@CSS/Salary.css"/>
+        <URL value="@CSS/Salary.css" />
     </stylesheets>
 </AnchorPane>
