Huyen pull code 10-05

--- a/Admin/IngredientsManager/View/FormIngredientOrder.fxml
+++ b/Admin/IngredientsManager/View/FormIngredientOrder.fxml
@@ -13,39 +13,39 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="522.0" prefWidth="749.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.FormIngredientOrderController">
+<AnchorPane prefHeight="640.0" prefWidth="1043.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.FormIngredientOrderController">
    <children>
-      <Label fx:id="header" layoutY="-4.0" prefHeight="32.0" prefWidth="749.0" styleClass="header" text="Form Order Ingredient" />
-      <Label layoutX="40.0" layoutY="78.0" prefHeight="32.0" prefWidth="115.0" styleClass="title-form" text="Employee's Name" />
-      <Label layoutX="40.0" layoutY="122.0" prefHeight="32.0" prefWidth="115.0" styleClass="title-form" text="Employee's ID" />
-      <TextField fx:id="textFieldName" editable="false" layoutX="172.0" layoutY="78.0" prefHeight="32.0" prefWidth="200.0" />
-      <TextField fx:id="textFieldID" editable="false" layoutX="171.0" layoutY="124.0" prefHeight="32.0" prefWidth="200.0" />
-      <Label layoutX="404.0" layoutY="78.0" prefHeight="32.0" prefWidth="115.0" styleClass="title-form" text="Date" />
-      <Label layoutX="404.0" layoutY="122.0" prefHeight="32.0" prefWidth="115.0" styleClass="title-form" text="Supplier" />
-      <TextField fx:id="textFieldSupplier" layoutX="539.0" layoutY="122.0" prefHeight="32.0" prefWidth="200.0" promptText="Enter supplier'name" />
-      <TableView fx:id="table" layoutX="22.0" layoutY="202.0" prefHeight="272.0" prefWidth="706.0">
+      <Label fx:id="header" layoutY="-4.0" prefHeight="32.0" prefWidth="1043.0" styleClass="header" text="Form Order Ingredient" />
+      <Label layoutX="57.0" layoutY="80.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Employee's Name" />
+      <Label layoutX="57.0" layoutY="124.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Employee's ID" />
+      <TextField fx:id="textFieldName" editable="false" layoutX="265.0" layoutY="79.0" prefHeight="32.0" prefWidth="222.0" />
+      <TextField fx:id="textFieldID" editable="false" layoutX="264.0" layoutY="125.0" prefHeight="32.0" prefWidth="222.0" />
+      <Label layoutX="542.0" layoutY="81.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Date" />
+      <Label layoutX="542.0" layoutY="125.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Supplier" />
+      <TextField fx:id="textFieldSupplier" layoutX="762.0" layoutY="123.0" prefHeight="32.0" prefWidth="222.0" promptText="Enter supplier'name" />
+      <TableView fx:id="table" layoutX="22.0" layoutY="207.0" prefHeight="382.0" prefWidth="1000.0">
         <columns>
           <TableColumn fx:id="idCol" prefWidth="63.5" text="ID" />
-          <TableColumn fx:id="nameCol" prefWidth="242.0" text="Name" />
-            <TableColumn fx:id="priceCol" prefWidth="109.5" text="Import Price" />
-            <TableColumn fx:id="qtyCol" prefWidth="110.0" text="Order Quantity" />
-            <TableColumn fx:id="typeCol" prefWidth="78.0" text="Category" />
-            <TableColumn fx:id="producerCol" prefWidth="102.0" text="Producer" />
+          <TableColumn fx:id="nameCol" prefWidth="405.09344482421875" text="Name" />
+            <TableColumn fx:id="priceCol" prefWidth="118.906494140625" text="Import Price" />
+            <TableColumn fx:id="qtyCol" prefWidth="125.77325439453125" text="Order Quantity" />
+            <TableColumn fx:id="typeCol" prefWidth="147.74267578125" text="Category" />
+            <TableColumn fx:id="producerCol" prefWidth="139.25726318359375" text="Producer" />
         </columns>
       </TableView>
-      <Label layoutX="9.0" layoutY="38.0" prefHeight="26.0" prefWidth="184.0" styleClass="label-form" text="Order Information">
+      <Label layoutX="9.0" layoutY="38.0" prefHeight="32.0" prefWidth="184.0" styleClass="label-form" text="Order Information">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="9.0" layoutY="164.0" prefHeight="26.0" prefWidth="184.0" styleClass="label-form" text="Ingredients Information">
+      <Label layoutX="9.0" layoutY="164.0" prefHeight="32.0" prefWidth="184.0" styleClass="label-form" text="Ingredients Information">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <DatePicker fx:id="date" layoutX="539.0" layoutY="78.0" prefHeight="32.0" prefWidth="200.0" promptText="Choose Date" />
-      <Button fx:id="backWarehouseBtn" layoutX="345.0" layoutY="487.0" mnemonicParsing="false" onAction="#sendOrder" prefHeight="25.0" prefWidth="63.0" styleClass="btn-confirm" text="Send" />
-      <Button fx:id="newOrderBtn" layoutX="5.0" layoutY="480.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
+      <DatePicker fx:id="date" layoutX="762.0" layoutY="79.0" prefHeight="32.0" prefWidth="222.0" promptText="Choose Date" />
+      <Button fx:id="backWarehouseBtn" layoutX="512.0" layoutY="597.0" mnemonicParsing="false" onAction="#sendOrder" prefHeight="27.0" prefWidth="73.0" styleClass="btn-confirm" text="Send" />
+      <Button fx:id="newOrderBtn" layoutX="3.0" layoutY="595.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
                <image>
