--- a/Admin/IngredientsManager/View/ConfirmOrder.fxml
+++ b/Admin/IngredientsManager/View/ConfirmOrder.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -11,15 +12,15 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="537.0" prefWidth="832.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.OrderList">
+<AnchorPane prefHeight="640.0" prefWidth="1043.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.ConfirmOrderController">
    <children>
-      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="832.0" text="Unconfirmed Orders" textAlignment="CENTER" />
+      <Label fx:id="header" contentDisplay="CENTER" prefHeight="30.0" prefWidth="1043.0" text="Unconfirmed Orders" textAlignment="CENTER" />
       <TextField layoutX="14.0" layoutY="44.0" prefHeight="26.0" prefWidth="274.0" promptText="Search...">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </TextField>
-      <Button fx:id="cfmDetailBtn" layoutX="283.0" layoutY="41.0" mnemonicParsing="false" onAction="#changeScene" prefHeight="31.0" prefWidth="36.0" styleClass="button-admin">
+      <Button layoutX="283.0" layoutY="41.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="36.0" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="17.0" fitWidth="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -28,15 +29,18 @@
             </ImageView>
          </graphic>
       </Button>
-      <TableView layoutX="13.0" layoutY="86.0" prefHeight="391.0" prefWidth="805.0">
+      <TableView fx:id="table" layoutX="13.0" layoutY="86.0" onMouseClicked="#chooseItem" prefHeight="501.0" prefWidth="1016.0">
          <columns>
-            <TableColumn prefWidth="94.0" text="Number Order" />
-            <TableColumn prefWidth="133.0" text="Emplyee's ID" />
-            <TableColumn prefWidth="431.82167053222656" text="Employee's Name" />
-            <TableColumn prefWidth="145.17840576171875" text="Date" />
+            <TableColumn fx:id="numberOrdCol" prefWidth="201.8105707168579" text="Number Order" />
+            <TableColumn fx:id="idEmployeeCol" prefWidth="190.1894073486328" text="Emplyee's ID" />
+            <TableColumn fx:id="nameEmployeeCol" prefWidth="417.4480285644531" text="Employee's Name" />
+            <TableColumn fx:id="dateCol" prefWidth="207.552001953125" text="Date" />
          </columns>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </TableView>
-      <Button fx:id="backWarehouseBtn" layoutX="8.0" layoutY="486.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
+      <Button fx:id="backWarehouseBtn" layoutX="5.0" layoutY="594.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="37.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
                <image>
