--- a/Admin/DataManager/View/Admin.Product.fxml
+++ b/Admin/DataManager/View/Admin.Product.fxml
@@ -60,12 +60,12 @@
             </ImageView>
          </graphic>
       </Button>
-      <TextField layoutX="37.0" layoutY="49.0" prefHeight="34.0" prefWidth="235.0" promptText="Search  here">
+      <TextField fx:id="txtSearchName" layoutX="37.0" layoutY="49.0" prefHeight="34.0" prefWidth="235.0" promptText="Search  here">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <Button layoutX="272.0" layoutY="48.0" mnemonicParsing="false" prefHeight="28.0" prefWidth="33.0" styleClass="button-admin">
+      <Button layoutX="272.0" layoutY="48.0" mnemonicParsing="false" onAction="#SearchName" prefHeight="28.0" prefWidth="33.0" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="34.0" fitWidth="28.0" layoutX="283.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
                <image>
