--- a/Admin/IngredientsManager/View/Css/WarehouseApplication.css
+++ b/Admin/IngredientsManager/View/Css/WarehouseApplication.css
@@ -51,7 +51,7 @@
 .btn-confirm,
 .label-form {
     -fx-font-weight: 900;
-    -fx-background-color: linear-gradient(from 0px 0px to 50px 100px, #f7971e, #ffd200);;
+    -fx-background-color: linear-gradient(from 0px 0px to 50px 100px, #f7971e, #ffd200);
     -fx-padding: 4px 8px;
     -fx-text-fill: #fff;
     -fx-border: solid;
@@ -60,4 +60,9 @@
 
 .btn-confirm:hover {
     -fx-background-color: linear-gradient(from 0px 0px to 50px 100px, #ff6b6b, #556270);
+}
+
+.combo-box {
+    -fx-background-color: linear-gradient(from 0px 0px to 50px 100px, #f7971e, #ffd200);
+    -fx-background-radius: 6px;
 }
