--- a/Admin/IngredientsManager/View/DeleteItemView.fxml
+++ b/Admin/IngredientsManager/View/DeleteItemView.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 <?import java.net.URL?>
-<AnchorPane prefHeight="311.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.IngredientDeleteController">
+<AnchorPane prefHeight="311.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.DeleteItemController">
    <children>
       <Label layoutY="-1.0" prefHeight="31.0" prefWidth="430.0" styleClass="header" text="Delete" />
       <ImageView fitHeight="117.0" fitWidth="122.0" layoutX="162.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
