--- a/Admin/IngredientsManager/View/OrderDetail.fxml
+++ b/Admin/IngredientsManager/View/OrderDetail.fxml
@@ -2,7 +2,6 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -15,39 +14,17 @@
 <AnchorPane prefHeight="640.0" prefWidth="1043.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Main.Admin.IngredientsManager.Controller.OrderDetailController">
    <children>
       <Label fx:id="header" layoutY="-4.0" prefHeight="32.0" prefWidth="1041.0" styleClass="header" text="Order Detail" />
-      <Label layoutX="55.0" layoutY="72.0" text="Employee's Name" />
-      <Label layoutX="55.0" layoutY="103.0" text="Employee's ID" />
-      <Label layoutX="55.0" layoutY="136.0" text="Phone Number" />
-      <TextField editable="false" layoutX="197.0" layoutY="68.0" prefHeight="26.0" prefWidth="279.0" text="Thanh Huyền" />
-      <TextField editable="false" layoutX="196.0" layoutY="99.0" prefHeight="26.0" prefWidth="279.0" text="035" />
-      <TextField editable="false" layoutX="197.0" layoutY="130.0" prefHeight="26.0" prefWidth="279.0" text="0909 889889" />
-      <Label layoutX="583.0" layoutY="71.0" text="Order Number" />
-      <Label layoutX="583.0" layoutY="102.0" text="Date" />
-      <Label layoutX="583.0" layoutY="135.0" text="Supplier" />
-      <TextField editable="false" layoutX="701.0" layoutY="68.0" prefHeight="26.0" prefWidth="279.0" text="PD12" />
-      <TextField editable="false" layoutX="701.0" layoutY="130.0" prefHeight="26.0" prefWidth="279.0" text="Dalat Farm" />
-      <TableView layoutX="16.0" layoutY="202.0" prefHeight="388.0" prefWidth="1013.0">
+      <TableView fx:id="table" layoutX="16.0" layoutY="202.0" prefHeight="388.0" prefWidth="1013.0">
          <columns>
-            <TableColumn prefWidth="52.24338150024414" text="ID" />
-            <TableColumn prefWidth="223.5" text="Name" />
-            <TableColumn prefWidth="96.5" text="Import Price" />
-            <TableColumn prefWidth="140.5" text="Order Quantity" />
-            <TableColumn minWidth="0.0" prefWidth="106.5" text="Income Quantity" />
-            <TableColumn prefWidth="93.5" text="Category" />
-            <TableColumn prefWidth="85.0" text="Supplier" />
+            <TableColumn fx:id="idCol" prefWidth="52.24338150024414" text="ID" />
+            <TableColumn fx:id="nameCol" prefWidth="354.5" text="Name" />
+            <TableColumn fx:id="priceCol" prefWidth="137.5" text="Import Price" />
+            <TableColumn fx:id="qtyCol" prefWidth="142.5" text="Order Quantity" />
+            <TableColumn fx:id="receiveQtyCol" minWidth="0.0" prefWidth="114.5" text="Receive Quantity" />
+            <TableColumn fx:id="typeCol" prefWidth="110.5" text="Category" />
+            <TableColumn fx:id="producerCol" prefWidth="100.0" text="Producer" />
          </columns>
       </TableView>
-      <Label layoutX="9.0" layoutY="39.0" prefHeight="25.0" prefWidth="194.0" styleClass="title-form" text="Order Information">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label layoutX="9.0" layoutY="164.0" prefHeight="25.0" prefWidth="191.0" styleClass="title-form" text="Ingredients Information">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <DatePicker editable="false" layoutX="701.0" layoutY="99.0" prefHeight="26.0" prefWidth="279.0" />
       <Button fx:id="orderListBtn" layoutX="-2.0" layoutY="608.0" mnemonicParsing="false" onAction="#changeScene" styleClass="button-admin">
          <graphic>
             <ImageView fitHeight="32.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" styleClass="button-bc">
@@ -66,6 +43,24 @@
             </ImageView>
          </graphic>
       </Button>
+      <Label layoutX="16.0" layoutY="36.0" prefHeight="26.0" prefWidth="185.0" styleClass="label-form" text="Order Information">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="16.0" layoutY="162.0" prefHeight="31.0" prefWidth="185.0" styleClass="label-form" text="Ingredients Information">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="73.0" layoutY="71.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Employee's Name" />
+      <Label layoutX="73.0" layoutY="115.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Employee's ID" />
+      <TextField fx:id="textFieldName" editable="false" layoutX="281.0" layoutY="70.0" prefHeight="32.0" prefWidth="222.0" />
+      <TextField fx:id="textFieldID" editable="false" layoutX="280.0" layoutY="116.0" prefHeight="32.0" prefWidth="222.0" />
+      <Label layoutX="558.0" layoutY="72.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Date" />
+      <Label layoutX="558.0" layoutY="116.0" prefHeight="32.0" prefWidth="187.0" styleClass="title-form" text="Supplier" />
+      <TextField fx:id="textFieldSupplier" editable="false" layoutX="778.0" layoutY="114.0" prefHeight="32.0" prefWidth="222.0" />
+      <TextField fx:id="date" editable="false" layoutX="778.0" layoutY="71.0" prefHeight="32.0" prefWidth="222.0" />
    </children>
    <stylesheets>
       <URL value="@Css/WarehouseApplication.css" />
